--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
-  <title>Tsunami Education</title>
+  <title>Save the Environment!</title>
   <link rel="shortcut icon" href="images/icon.png">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -15,9 +15,8 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1 id="title">MORE PEOPLE SHOULD BE EDUCATED ABOUT TSUNAMIS!!!</h1>
-  <h5>More people educated about tsunamis means less people's lives taken by tsunamis</h5>
-  <br><p>Study shows that children in school that learn about tsunamis have a better chance of surviving it because they know how to protect themselves. </p>
-  <img src="https://github.com/jcgter777/TsunamiEd/blob/master/images/image.png?raw=true" alt="Tsunami stats">
+  <h1 id="title">Save the Environment!</h1>
+  <h5>We need to preserve the Earth for future generations!</h5>
+  <br><p></p>
 </body>
 </html>
